* generalize product 3d * refactor and clean code implementing common services * minor changes

--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,7 @@
     --mava-yellow: 45 100% 70%;
     --mava-orange: 25 90% 65%;
     --mava-blue: 210 80% 70%;
+    --mava-azure: 200 100% 70%;
     --mava-green: 130 60% 45%;
     --mava-mint: 150 50% 75%;
     --mava-pink: 340 70% 75%;
